Project Structure Updated (Improvement in Architecture, SOLID Implementation, Dependency Injection, Validation, Exception Handling, Logging, Use of OOP principle except using Dictionary)

--- a/ChampionshipChallenge/ChampionshipChallenge.csproj
+++ b/ChampionshipChallenge/ChampionshipChallenge.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Matches.txt">
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\Matches.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
